# til24-vlm

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.custom  Dockerfile.simple  README.md  dev.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh  setupGCS.sh
eval/: test_vlm.py  vlm_eval.py
notebooks/: test.ipynb
py_api_template/: app.py
scripts/: build_source.sh
til24_vlm/: VLMManager.py  app.py  log.py  structs.py
