[tool.poetry]
name = "til24-vlm"
version = "0.1.0"
description = "template for python api server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
python-dotenv = "^1.0.1"
fastapi-slim = "^0.111.0"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
transformers = "^4.41.0"
scipy = "^1.13.0"
pillow = "^10.3.0"
xxhash = "^3.4.1"
dill = "^0.3.8"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"
poethepoet = "*"
rich = "^13.7.1"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
requests = "^2.31.0"
tqdm = "^4.66.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
matplotlib = "^3.9.0"
ipympl = "^0.9.4"
opencv-python-headless = "^4.9.0.80"
ultralytics = { path = "thirdparty/ultralytics", develop = true }
open-clip-torch = { path = "thirdparty/open_clip", develop = true }

[tool.poe.tasks]
# use_exec for some tasks to avoid hangs on SIGINT.
dev = { cmd = "python dev.py", use_exec = true }
prod = { cmd = "docker run --rm --gpus all -it -p 5004:5004 nyanplan3-vlm:latest", use_exec = true }
test = "python eval/test_vlm.py"
publish = "docker push -a asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-vlm"
requirements = "poetry export -o requirements.txt --without-hashes"

[tool.poe.tasks.build]
cmd = """docker build -f Dockerfile . \
  -t nyanplan3-vlm:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-vlm:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-vlm:finals \
  -t nyanplan3-vlm:${tag} \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-vlm:${tag} \
"""
deps = ["requirements"]
args = [{ name = "tag", positional = true, required = true }]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
